[gd_scene load_steps=13 format=3 uid="uid://cni81h2wunn0y"]

[ext_resource type="Script" path="res://system/menu/tag_manager/tag_manager.gd" id="1_xdhcn"]
[ext_resource type="Script" path="res://addons/icons-fonts/nodes/FontIconButton.gd" id="2_qlgf2"]
[ext_resource type="Script" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="3_3ilns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2dx2"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Resource" id="Resource_yim4j"]
script = ExtResource("3_3ilns")
icon_font = "MaterialIcons"
icon_name = "tag-plus"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_giqeq"]

[sub_resource type="Resource" id="Resource_gmslm"]
script = ExtResource("3_3ilns")
icon_font = "MaterialIcons"
icon_name = "tag-remove"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_3a1id"]

[sub_resource type="Resource" id="Resource_61xp5"]
script = ExtResource("3_3ilns")
icon_font = "MaterialIcons"
icon_name = "tag-arrow-down"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_upgav"]

[sub_resource type="Resource" id="Resource_6ek0u"]
script = ExtResource("3_3ilns")
icon_font = "MaterialIcons"
icon_name = "tag-arrow-up"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_g7tfi"]

[node name="TagManager" type="Window"]
initial_position = 2
size = Vector2i(500, 300)
wrap_controls = true
transient = true
exclusive = true
script = ExtResource("1_xdhcn")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 24)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvailableTags" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AvailableTags"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2
text = "Select tags to apply:"

[node name="TagsList" type="HBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableTagsDisplay" type="ItemList" parent="VBoxContainer/AvailableTags/VBoxContainer/TagsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_search = false

[node name="AddTag" type="HBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2

[node name="TagName" type="LineEdit" parent="VBoxContainer/AvailableTags/VBoxContainer/AddTag"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter tag name to add..."

[node name="AddTag" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/AddTag"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create new tag."
theme_override_styles/panel = SubResource("StyleBoxFlat_l2dx2")
script = ExtResource("2_qlgf2")
layout_order = "Icon"
icon_settings = SubResource("Resource_yim4j")
label_settings = SubResource("LabelSettings_giqeq")

[node name="DeleteTag" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/AddTag"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove a tag from the available tags."
theme_override_styles/panel = SubResource("StyleBoxFlat_l2dx2")
script = ExtResource("2_qlgf2")
layout_order = "Icon"
icon_settings = SubResource("Resource_gmslm")
label_settings = SubResource("LabelSettings_3a1id")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2

[node name="ApplyTags" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l2dx2")
script = ExtResource("2_qlgf2")
icon_settings = SubResource("Resource_61xp5")
label_text = "Apply Selected"
label_settings = SubResource("LabelSettings_upgav")

[node name="SelectedTags" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SelectedTags"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AppliedTagsTitle" type="Label" parent="VBoxContainer/SelectedTags/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Applied tags:"

[node name="SelectedTagsDisplay" type="ItemList" parent="VBoxContainer/SelectedTags/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
allow_search = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SelectedTags/VBoxContainer"]
layout_mode = 2

[node name="RemoveTags" type="PanelContainer" parent="VBoxContainer/SelectedTags/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l2dx2")
script = ExtResource("2_qlgf2")
icon_settings = SubResource("Resource_6ek0u")
label_text = "Remove Selected"
label_settings = SubResource("LabelSettings_g7tfi")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_activated" from="VBoxContainer/AvailableTags/VBoxContainer/TagsList/AvailableTagsDisplay" to="." method="_on_available_tags_display_item_activated"]
[connection signal="pressed" from="VBoxContainer/AvailableTags/VBoxContainer/AddTag/AddTag" to="." method="_on_add_tag_pressed"]
[connection signal="pressed" from="VBoxContainer/AvailableTags/VBoxContainer/AddTag/DeleteTag" to="." method="_on_delete_tag_pressed"]
